# qwer

./: .README.md.swp  .gitignore  .gitmodules  .travis.yml  README.md  travis.yml
http_server_client_practice/: .color_coded  .ycm_extra_conf.py  CMakeLists.txt  ReadMe.md
http_server_client_practice/src/: CMakeLists.txt  raw_build_example.cpp  server_a.cpp  server_client.cpp
http_server_client_practice/src/faci/: config.h  facility.cpp  facility.h  nettools.cpp  nettools.h
http_server_client_practice/stuff/: log.txt
http_server_client_practice/test/: 0_config_test.cpp  1_facility_test.cpp  2_nettools_test.cpp  CMakeLists.txt
qwer_main/: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  runme_instead_of_cmake.sh  tags
qwer_main/src/: CMakeLists.txt  raw_build_example.cpp
qwer_main/src/example/: chat_example.cpp  http_example.cpp
qwer_main/src/lib/: .my_timer.cpp.swp  .my_timer.h.swp  .tcpserver.h.swp  config.h  config.h.in  epollwrapper.cpp  epollwrapper.h  event.cpp  event.h  facility.cpp  facility.h  httpprotocol.cpp  httpprotocol.h  msg_codec.cpp  msg_codec.h  msg_responser.cpp  msg_responser.h  multithread_version.cpp  multithread_version.h  my_timer.cpp  my_timer.h  nettools.cpp  nettools.h  qwer.h  qwerset.h  tcpserver.cpp  tcpserver.h  threadpool.cpp  threadpool.h  webservice.cpp  webservice.h
qwer_main/stuff/: log.txt
qwer_main/test/: .4_tcp_test.cpp.swp  0_config_test.cpp  1_facility_test.cpp  2_nettools_test.cpp  3_event_test.cpp  4_tcp_test.cpp  5_http_test.cpp  6_multithread_test.cpp  CMakeLists.txt
real_example_using_this/: CMakeLists.txt  README.md  qwer_main_softlink
real_example_using_this/src/: CMakeLists.txt  daemon.cpp
